--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -117,74 +117,6 @@
                     </td>
                   </tr>
                 {% endfor %}
-                <!--tr>
-                  <td><a href="#">Topic 1: Abstraction</a></td>
-                  <td>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-success" role="progressbar"
-                             aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                             style="width: 30%;">
-                            <span class="sr-only">30% completed</span>
-                        </div>
-                        <div class="progress-bar progress-bar-warning" role="progressbar"
-                           aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                           style="width: 20%;">
-                          <span class="sr-only">20% half-way done</span>
-                        </div>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><a href="#">Topic 2: Algorithm</a></td>
-                  <td>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-success" role="progressbar"
-                             aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                             style="width: 50%;">
-                            <span class="sr-only">50% completed</span>
-                        </div>
-                        <div class="progress-bar progress-bar-warning" role="progressbar"
-                           aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                           style="width: 0%;">
-                          <span class="sr-only">0% half-way done</span>
-                        </div>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><a href="#">Topic 3: Programming</a></td>
-                  <td>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-success" role="progressbar"
-                             aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                             style="width: 100%;">
-                            <span class="sr-only">100% completed</span>
-                        </div>
-                        <div class="progress-bar progress-bar-warning" role="progressbar"
-                           aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                           style="width: 0%;">
-                          <span class="sr-only">0% half-way done</span>
-                        </div>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><a href="#">Topic 4: Computer Systems</a></td>
-                  <td>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-success" role="progressbar"
-                             aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                             style="width: 60%;">
-                            <span class="sr-only">60% completed</span>
-                        </div>
-                        <div class="progress-bar progress-bar-warning" role="progressbar"
-                           aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                           style="width: 10%;">
-                          <span class="sr-only">10% half-way done</span>
-                        </div>
-                    </div>
-                  </td>
-                </tr-->
               </tbody>
             </table>
             </div>
@@ -256,7 +188,7 @@
         }
         function get_knowledge_graph_data() {
           return [{
-                    name: 'node 1',
+                    name: 'Math',
                     x: 300,
                     y: 300,
                     itemStyle: {
@@ -265,16 +197,7 @@
                         }
                     }
                 }, {
-                    name: 'node 2',
-                    x: 800,
-                    y: 300,
-                    itemStyle: {
-                        normal: {
-                            color: "gray",
-                        }
-                    }
-                }, {
-                    name: 'node 3',
+                    name: 'Algorithm',
                     x: 550,
                     y: 100,
                     itemStyle: {
@@ -283,7 +206,16 @@
                         }
                     }
                 }, {
-                    name: 'node 4',
+                    name: 'Programming',
+                    x: 800,
+                    y: 300,
+                    itemStyle: {
+                        normal: {
+                            color: "gray",
+                        }
+                    }
+                }, {
+                    name: 'Data Structure',
                     x: 550,
                     y: 500,
                     itemStyle: {
@@ -295,8 +227,9 @@
         }
         function get_knowledge_graph_link() {
           return [{
-                    source: 'node 2',
-                    target: 'node 1',
+                    source: 'Math',
+                    target: 'Data Structure',
+                    /*
                     label: {
                         normal: {
                             show: true
@@ -304,19 +237,16 @@
                     },
                     lineStyle: {
                         normal: { curveness: 0.2 }
-                    }
+                    }*/
                 }, {
-                    source: 'node 1',
-                    target: 'node 3'
+                    source: 'Math',
+                    target: 'Algorithm'
                 }, {
-                    source: 'node 2',
-                    target: 'node 3'
+                    source: 'Data Structure',
+                    target: 'Programming'
                 }, {
-                    source: 'node 2',
-                    target: 'node 4'
-                }, {
-                    source: 'node 1',
-                    target: 'node 4'
+                    source: 'Algorithm',
+                    target: 'Programming'
                 }];
         }
       </script>
@@ -325,36 +255,6 @@
         // console.log(document.getElementById("zoomable").checked);
         // render_graph(true);
       </script>
-
-      <!--FIXME: CSS Class -->
-      <!--div style="width:50%;text-align:center;margin-left:auto;margin-right:auto;padding-top:10px;">
-          <hr>
-          <h2>Topics Included</h2>
-      </div>
-
-      <div class="topic_container">
-
-          <div class="topic_link">
-            <a href="#">Topic 1: Abstraction</a>
-          </div>
-
-          <div class="topic_link">
-            <a href="#">Topic 2: Algorithm</a>
-          </div>
-
-          <div class="topic_link">
-            <a href="#">Topic 3: Programming</a>
-          </div>
-
-          <div class="topic_link">
-            <a href="#">Topic 4: Computer Systems</a>
-          </div>
-
-          <div class="topic_link">
-            <a href="#">Topic 5: Social Influence</a>
-          </div>
-
-      </div-->
     
 
     </div>
@@ -365,12 +265,6 @@
             });*/
         });
     </script>
-    <!--div class="page-feedback">
-      <button class="btn btn-primary btn-xs feedback-button" type="button" data-toggle="collapse" data-target="#fdbk">
-        Feedback
-      </button>
-      <div id="fdbk" class="collapse feedback-panel panel panel-primary"></div>
-    </div-->
   </body>
 
 </html>
