--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -193,6 +193,7 @@
                     id: 0,
                     x: 300,
                     y: 300,
+                    value: 100,
                     itemStyle: {
                         normal: {
                             color: "green",
@@ -203,6 +204,7 @@
                     id: 1,
                     x: 550,
                     y: 100,
+                    value: 80,
                     itemStyle: {
                         normal: {
                             color: "gray",
@@ -213,6 +215,7 @@
                     id: 2,
                     x: 800,
                     y: 300,
+                    value: 70,
                     itemStyle: {
                         normal: {
                             color: "gray",
@@ -223,6 +226,7 @@
                     id: 3,
                     x: 550,
                     y: 500,
+                    value: 60,
                     itemStyle: {
                         normal: {
                             color: "gray",
