--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -84,7 +84,7 @@
         <li><a href="#topic_2" data-toggle="tab">Topic 2: Programming</a></li>
         <li><a href="#topic_3" data-toggle="tab">Topic 3: Data Struct</a></li>
         <li><a href="#topic_4" data-toggle="tab">Topic 4: Algorithm</a></li>
-        <li><a href="#random" data-toggle="tab">Random Walk</a></li>
+        <li><a href="#random" data-toggle="tab" onclick="request_exercise_section(0)">Random Walk</a></li>
       </ul>
       <div id="myTabContent" class="tab-content">
         <div class="tab-pane fade in active" id="structure">
@@ -130,13 +130,14 @@
             </table>
             </div>
           </div>
+
           <div class="tab-pane fade" id="topic_1">
             <table class="table" 
                     data-toggle="table" 
                     data-url="{{ url_for('static', filename='dataset/topic1_test.json') }}"
                     data-pagination="true"
                     data-search="true">
-              <caption>Questions included in this topic</caption>
+              <caption>Questions included in Math</caption>
               <thead>
                   <tr>
                       <th data-field="id" data-formatter="Question %s">Question</th>
@@ -145,42 +146,33 @@
                       <th data-field="status" data-formatter="status_format">Status</th>
                   </tr>
               </thead>
-              <!--thead>
-                <tr>
-                  <th>Question</th>
-                  <th>Last tried</th>
-                  <th>Status</th>
-                </tr>
-              </thead>
-              
-              <tbody>
-                <tr>
-                  <td>Question 1</td>
-                  <td>23/11/2013</td>
-                  <td><font color="green">&#10004;</font></td>
-                </tr>
-                <tr>
-                  <td>Question 2</td>
-                  <td>10/11/2013</td>
-                  <td><font color="orange">&#10008;</font></td>
-                </tr>
-                <tr>
-                  <td>Question 3</td>
-                  <td>N/A</td>
-                  <td>&#10068;</td>
-                </tr>
-              </tbody-->
-              <!-- https://www.rapidtables.com/web/html/html-codes.html -->
             </table>
+          </div>
 
-            
-          </div>
           <div class="tab-pane fade" id="topic_2">
+            <table class="table" 
+                    data-toggle="table" 
+                    data-url="{{ url_for('static', filename='dataset/topic1_test.json') }}"
+                    data-pagination="true"
+                    data-search="true">
+              <caption>Questions included in Programming</caption>
+              <thead>
+                  <tr>
+                      <th data-field="id" data-formatter="Question %s">Question</th>
+                      <th data-field="description">Question Description</th>
+                      <th data-field="timestamp">Last Tried</th>
+                      <th data-field="status" data-formatter="status_format">Status</th>
+                  </tr>
+              </thead>
+            </table>
           </div>
+
           <div class="tab-pane fade" id="topic_3">
           </div>
+
           <div class="tab-pane fade" id="topic_4">
           </div>
+
         </div>
 
       </div>
