frontend-backend divided

--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -3,7 +3,7 @@
   <head>
     <title>Welcome to AutoQuiz</title>
 
-    <link rel="icon" href="{{ url_for('static', filename='img/alonzo.gif') }}">
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
     <!--script src="../static/jquery.min.js" type="text/javascript"></script>
     <script src="../static/bootstrap.min.js" type="text/javascript"></script>
     <script src="../static/analytics.js" type="text/javascript"></script>
